// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SinglePostsPost Snapshot > renders with full post and auth disabled correctly 1`] = `
"<main class="min-h-[calc(100vh-var(--ui-header-height))]">
  <section class="mb-8">
    <section class="py-20">
      <h1 class="md:text-center"></h1>
      <!--v-if-->
    </section>
    <div class="flex flex-wrap gap-2"></div>
  </section>
  <div class="items-end justify-between lg:flex">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row my-4">
    <div class="border-(--ui-border) w-full border-solid border-t"></div>
    <div class="font-medium text-(--ui-text) flex mx-3 whitespace-nowrap">
      <div class="flex items-center space-x-2"><svg width="35pt" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" aria-label="SERP Brand logo">
          <path class="fill-[var(--ui-primary)]" d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"></path>
        </svg></div>
    </div>
    <div class="border-(--ui-border) w-full border-solid border-t"></div>
  </div><!-- eslint-disable-next-line vue/no-v-html-->
  <article class="prose dark:prose-invert mb-20">
    <p>Content of the post</p>
  </article><!-- link hub for other posts -->
  <!--v-if-->
  <section data-orientation="vertical" class="relative isolate text-center">
    <div class="max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
      <div class="">
        <!--v-if-->
        <!--v-if-->
        <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-(--ui-text-highlighted) text-center">Subscribe to the newsletter</h2>
        <div class="text-base sm:text-lg text-(--ui-text-muted) text-center text-balance mt-6">Join a trillion other readers getting the best info on AI &amp; technology and stay ahead of the curve.</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="flex justify-center">
        <!-- For white background --><button type="button" class="disabled:bg-(--ui-primary) aria-disabled:bg-(--ui-primary) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) my-4 inline-flex items-center gap-2 rounded-md border border-neutral-400 bg-white px-8 py-3 text-lg font-semibold text-neutral-800 transition-colors hover:bg-gray-100 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-(--ui-primary) disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75">
          <!--v-if--><span class="truncate">Subscribe</span>
          <!--v-if-->
        </button>
        <!--v-if-->
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
  </section><!-- Comments Section -->
  <!--v-if-->
</main>"
`;

exports[`SinglePostsPost Snapshot > renders with full post and auth enabled correctly 1`] = `
"<main class="min-h-[calc(100vh-var(--ui-header-height))]">
  <section class="mb-8">
    <section class="py-20">
      <h1 class="md:text-center"></h1>
      <!--v-if-->
    </section>
    <div class="flex flex-wrap gap-2"></div>
  </section>
  <div class="items-end justify-between lg:flex">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row my-4">
    <div class="border-(--ui-border) w-full border-solid border-t"></div>
    <div class="font-medium text-(--ui-text) flex mx-3 whitespace-nowrap">
      <div class="flex items-center space-x-2"><svg width="35pt" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" aria-label="SERP Brand logo">
          <path class="fill-[var(--ui-primary)]" d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"></path>
        </svg></div>
    </div>
    <div class="border-(--ui-border) w-full border-solid border-t"></div>
  </div><!-- eslint-disable-next-line vue/no-v-html-->
  <article class="prose dark:prose-invert mb-20">
    <p>Content of the post</p>
  </article><!-- link hub for other posts -->
  <!--v-if-->
  <section data-orientation="vertical" class="relative isolate text-center">
    <div class="max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
      <div class="">
        <!--v-if-->
        <!--v-if-->
        <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-(--ui-text-highlighted) text-center">Subscribe to the newsletter</h2>
        <div class="text-base sm:text-lg text-(--ui-text-muted) text-center text-balance mt-6">Join a trillion other readers getting the best info on AI &amp; technology and stay ahead of the curve.</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="flex justify-center">
        <!-- For white background --><button type="button" class="disabled:bg-(--ui-primary) aria-disabled:bg-(--ui-primary) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) my-4 inline-flex items-center gap-2 rounded-md border border-neutral-400 bg-white px-8 py-3 text-lg font-semibold text-neutral-800 transition-colors hover:bg-gray-100 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-(--ui-primary) disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75">
          <!--v-if--><span class="truncate">Subscribe</span>
          <!--v-if-->
        </button>
        <!--v-if-->
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
  </section><!-- Comments Section -->
  <div class="mt-10">
    <h2 class="mb-4 text-2xl font-bold">Comments</h2>
    <div data-v-e7198dba="" class="comments comments-github-style" style="background: transparent;">
      <div data-v-e7198dba="" class="innerWrapper">
        <div data-v-e7198dba="" class="userName">
          <div data-v-e7198dba="" class="addComment">
            <div data-v-e7198dba="" class="w-12 rounded-t-full">
              <!--v-if-->
            </div>
            <div data-v-e7198dba="" class="commentBox text-black dark:text-white"><textarea data-v-e7198dba="" name="addComment" class="addComment border-neutral-500 bg-white dark:border-neutral-400 dark:bg-neutral-800" placeholder="Add a comment" spellcheck="true" aria-label="Add comment"></textarea>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
        <transition-group-stub data-v-e7198dba="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
        <!--v-if-->
      </div>
    </div>
  </div>
</main>"
`;

exports[`SinglePostsPost Snapshot > renders with non-empty relatedPosts correctly 1`] = `
"<main class="min-h-[calc(100vh-var(--ui-header-height))]">
  <section class="mb-8">
    <section class="py-20">
      <h1 class="md:text-center">Related Posts Present</h1>
      <!--v-if-->
    </section>
    <div class="flex flex-wrap gap-2"></div>
  </section>
  <div class="items-end justify-between lg:flex">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row my-4">
    <div class="border-(--ui-border) w-full border-solid border-t"></div>
    <div class="font-medium text-(--ui-text) flex mx-3 whitespace-nowrap">
      <div class="flex items-center space-x-2"><svg width="35pt" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" aria-label="SERP Brand logo">
          <path class="fill-[var(--ui-primary)]" d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"></path>
        </svg></div>
    </div>
    <div class="border-(--ui-border) w-full border-solid border-t"></div>
  </div><!-- eslint-disable-next-line vue/no-v-html-->
  <article class="prose dark:prose-invert mb-20">
    <p>Some content here</p>
  </article><!-- link hub for other posts -->
  <!--v-if-->
  <section data-orientation="vertical" class="relative isolate text-center">
    <div class="max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
      <div class="">
        <!--v-if-->
        <!--v-if-->
        <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-(--ui-text-highlighted) text-center">Subscribe to the newsletter</h2>
        <div class="text-base sm:text-lg text-(--ui-text-muted) text-center text-balance mt-6">Join a trillion other readers getting the best info on AI &amp; technology and stay ahead of the curve.</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="flex justify-center">
        <!-- For white background --><button type="button" class="disabled:bg-(--ui-primary) aria-disabled:bg-(--ui-primary) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) my-4 inline-flex items-center gap-2 rounded-md border border-neutral-400 bg-white px-8 py-3 text-lg font-semibold text-neutral-800 transition-colors hover:bg-gray-100 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-(--ui-primary) disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75">
          <!--v-if--><span class="truncate">Subscribe</span>
          <!--v-if-->
        </button>
        <!--v-if-->
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
  </section><!-- Comments Section -->
  <div class="mt-10">
    <h2 class="mb-4 text-2xl font-bold">Comments</h2>
    <div data-v-e7198dba="" class="comments comments-github-style" style="background: transparent;">
      <div data-v-e7198dba="" class="innerWrapper">
        <div data-v-e7198dba="" class="userName">
          <div data-v-e7198dba="" class="addComment">
            <div data-v-e7198dba="" class="w-12 rounded-t-full">
              <!--v-if-->
            </div>
            <div data-v-e7198dba="" class="commentBox text-black dark:text-white"><textarea data-v-e7198dba="" name="addComment" class="addComment border-neutral-500 bg-white dark:border-neutral-400 dark:bg-neutral-800" placeholder="Add a comment" spellcheck="true" aria-label="Add comment"></textarea>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
        <transition-group-stub data-v-e7198dba="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
        <!--v-if-->
      </div>
    </div>
  </div>
</main>"
`;

exports[`SinglePostsPost Snapshot > renders without video and minimal fields correctly 1`] = `
"<main class="min-h-[calc(100vh-var(--ui-header-height))]">
  <section class="mb-8">
    <section class="py-20">
      <h1 class="md:text-center">No Video Post</h1>
      <!--v-if-->
    </section>
    <div class="flex flex-wrap gap-2"></div>
  </section>
  <div class="items-end justify-between lg:flex">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row my-4">
    <div class="border-(--ui-border) w-full border-solid border-t"></div>
    <div class="font-medium text-(--ui-text) flex mx-3 whitespace-nowrap">
      <div class="flex items-center space-x-2"><svg width="35pt" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" aria-label="SERP Brand logo">
          <path class="fill-[var(--ui-primary)]" d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"></path>
        </svg></div>
    </div>
    <div class="border-(--ui-border) w-full border-solid border-t"></div>
  </div><!-- eslint-disable-next-line vue/no-v-html-->
  <article class="prose dark:prose-invert mb-20">
    <p>Content without video</p>
  </article><!-- link hub for other posts -->
  <!--v-if-->
  <section data-orientation="vertical" class="relative isolate text-center">
    <div class="max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
      <div class="">
        <!--v-if-->
        <!--v-if-->
        <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-(--ui-text-highlighted) text-center">Subscribe to the newsletter</h2>
        <div class="text-base sm:text-lg text-(--ui-text-muted) text-center text-balance mt-6">Join a trillion other readers getting the best info on AI &amp; technology and stay ahead of the curve.</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="flex justify-center">
        <!-- For white background --><button type="button" class="disabled:bg-(--ui-primary) aria-disabled:bg-(--ui-primary) focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-(--ui-primary) my-4 inline-flex items-center gap-2 rounded-md border border-neutral-400 bg-white px-8 py-3 text-lg font-semibold text-neutral-800 transition-colors hover:bg-gray-100 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-(--ui-primary) disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75">
          <!--v-if--><span class="truncate">Subscribe</span>
          <!--v-if-->
        </button>
        <!--v-if-->
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </div>
  </section><!-- Comments Section -->
  <div class="mt-10">
    <h2 class="mb-4 text-2xl font-bold">Comments</h2>
    <div data-v-e7198dba="" class="comments comments-github-style" style="background: transparent;">
      <div data-v-e7198dba="" class="innerWrapper">
        <div data-v-e7198dba="" class="userName">
          <div data-v-e7198dba="" class="addComment">
            <div data-v-e7198dba="" class="w-12 rounded-t-full">
              <!--v-if-->
            </div>
            <div data-v-e7198dba="" class="commentBox text-black dark:text-white"><textarea data-v-e7198dba="" name="addComment" class="addComment border-neutral-500 bg-white dark:border-neutral-400 dark:bg-neutral-800" placeholder="Add a comment" spellcheck="true" aria-label="Add comment"></textarea>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
        <transition-group-stub data-v-e7198dba="" name="fade" tag="div" appear="true" persisted="false" css="true"></transition-group-stub>
        <!--v-if-->
      </div>
    </div>
  </div>
</main>"
`;
